added browserSync and watch task

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,12 @@
 /*stylesheet for insta api demo*/
 
+$tomatored: #cccccc;
+
+body{
+    font-family: “Helvetica Neue”, Helvetica, Arial, sans-serif;
+    color:$tomatored;
+}
+
 img{
     padding:20px;
 }
