--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,16 +1,48 @@
 /*stylesheet for insta api demo*/
 
-$tomatored: #cccccc;
+$black: #000000;
+$white: #ffffff;
+$red: tomato;
+
+*{
+    padding:0;
+    margin:0;
+}
 
 body{
     font-family: “Helvetica Neue”, Helvetica, Arial, sans-serif;
-    color:$tomatored;
+    color:$red;
+    width:100%;
+    height:100%;
 }
 
-img{
-    padding:20px;
+
+.insta{
+    width:1200px;
+    margin:0 auto;
 }
 
-ul,li{
-    list-style: none;
+.main{
+
+    display:grid;
+    grid-template-columns:repeat(5,1fr);
+    grid-auto-rows:232px;
+    grid-gap:10px;
+}
+
+
+.image{
+    &__item{
+
+         background-size:cover;
+         background-repeat:no-repeat;
+         background-position:center center;
+         width:100%;
+         height:100%;
+     }
+
+     &__tag{
+        padding:5px;
+        color: $white;
+     }
 }
