--- a/app/css/style.css
+++ b/app/css/style.css
@@ -20,13 +20,29 @@ body {
   grid-auto-rows: 232px;
   grid-gap: 10px; }
 
+.image__tag {
+  padding: 5px;
+  color: #ffffff;
+  display: none; }
+
 .image__item {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   width: 100%;
   height: 100%; }
+  .image__item:hover .image__tag {
+    background-color: tomato;
+    display: block; }
 
-.image__tag {
-  padding: 5px;
-  color: #ffffff; }
+.header {
+  height: 50px;
+  position: relative;
+  margin-top: 25px; }
+  .header__profile {
+    position: absolute;
+    right: 0;
+    top: 5px; }
+  .header__profImg {
+    width: 54px;
+    clip-path: circle(50%); }
