--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,13 @@ $black: #000000;
 $white: #ffffff;
 $red: tomato;
 
+/*
+    insta colors
+    http://www.color-hex.com/color-palette/20465
+    https://brandcolors.net/b/instagram
+
+*/
+
 *{
     padding:0;
     margin:0;
