--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,14 +25,14 @@ body{
 
 
 .insta{
-    width:1200px;
+    max-width:1200px;
     margin:0 auto;
+    padding:0 10px;
 }
 
 .main{
-
     display:grid;
-    grid-template-columns:repeat(5,1fr);
+    grid-template-columns:repeat(auto-fit,minmax(232px,1fr/*232px*/));
     grid-auto-rows:232px;
     grid-gap:10px;
 }
